chore: removed unused stuff; improve comments; improve cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,7 +84,7 @@ target_include_directories(${PROJECT_NAME}.elf PUBLIC
   ${CMAKE_CURRENT_SOURCE_DIR}/User
   ${CMAKE_CURRENT_SOURCE_DIR}/User/daplink
   ${CMAKE_CURRENT_SOURCE_DIR}/User/daplink/core
-  ${CMAKE_CURRENT_SOURCE_DIR}/User/daplink/usb
+  ${CMAKE_CURRENT_SOURCE_DIR}/User/daplink/interface
   ${CMAKE_CURRENT_SOURCE_DIR}/Peripheral/inc
 )
 
